--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "devDependencies": {
     "@chainlink/contracts": "^1.2.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
     "hardhat": "^2.22.13",
+    "hardhat-deploy": "^0.12.2",
+    "hardhat-deploy-ethers": "^0.4.2",
+    "hardhat-gas-reporter": "^2.2.1",
     "undici": "^6.20.0"
   }
 }
